ツイートページ　ヘッダー　大会別

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
  */
  @import "bootstrap";
  @import "./analyses";
- @import "./style";
+ @import "./tweet";
  @import "./devise";
  @import "./forecast";
  @import "./mypage";
