--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -10,7 +10,8 @@
 }
 
 .header {
-  background-image: url("https://pics.prcm.jp/feed9aaf1ab2e/81573810/jpeg/81573810.jpeg");
+  background-image: image-url("81573810.jpeg");
+  line-height: 300px;
 }
 
 .analysis_header {
@@ -68,8 +69,13 @@ color: white;
   opacity: 0.7;
 }
 
-.title {
-  text-decoration: none;
+.by_tournament {
+  position: relative;
+  left: 40%;
+  font-size: 13px;
+}
+
+.tournament_title,.title {
   color: rgb(17, 0, 255);
 }
 
