--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -17,18 +17,22 @@
       <img src="https://sanchanne.com/wp-content/uploads/2019/09/fd72cd69ead1784014d1e58100d9a322.png" width="100" height="100">
     </div>
   </div>
+  <div class="tournament-info mt-5 mb-4">
+    大会別
+  </div>
   <% @category_parent_array.each do |tournament|%>
     <div class="by_tournament d-inline-block">
-      <%= link_to "/tournaments/#{tournament.id}",class: "tournament_title" do %>
-        <i class="fa fa-baseball-ball"></i>
-        <p><%= tournament.name %></p>
-      <% end %>
+      <i class="fa fa-baseball-ball text-white"></i>
+      <%= link_to "#{tournament.name}","/tournaments/#{tournament.id}",class: "tournament-title text-white"%>
     </div>
   <%end%>
-  <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search-form") do |form| %>
+  <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search") do |form| %>
   <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
   <%= form.submit "検索", class: "search-btn" %>
   <% end %>
+<div class="article-info text-center">
+  みんなの試合記事
+</div>
  <%= render partial: "tweet_show"%>
 </div>
 <%= paginate(@tweets)%>
