--- a/app/views/tournaments/watch.html.erb
+++ b/app/views/tournaments/watch.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "分析一覧へ戻る",analyses_path,class: "return-top"%>
+<%= link_to "分析一覧へ戻る",analyses_path,class: "return-btn"%>
 <div class="go-avg">
   <%=@analysis.name%><br>
   <%= link_to "平均評価を見る",watch_avg_tournament_path,class: "ays-avg" %>
