--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -4,7 +4,7 @@
   padding-top: 30px;
 }
 
-.edit-article,.return-top {
+.edit-article,.return-btn,.return-top {
   border: 2px solid #57e963;
   color: #57e963;
   padding: 5px;
@@ -32,7 +32,6 @@
 .image {
   margin-top: 120px;
   text-align: center;
-  /* box-shadow: 0 0 10px rgba(41,41,41,0.2); */
   border-bottom: solid 2px rgb(221, 215, 203);
   position: relative;
 }
