--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -12,11 +12,12 @@
   <div class="game_result">
     <%=@tweet.school_a.name%>
     <%=@tweet.school_a_score%>
-    <a>-</a>
+    -
     <%=@tweet.school_b_score%>
     <%=@tweet.school_b.name%>
   </div>
   <div class="sub_title">
+    <i class="fa fa-baseball-ball text-white"></i>
     <%=@tweet.title_info%>
   </div>
   <div class=texts>
@@ -34,14 +35,20 @@
       <li><%=user.nickname%></li>
     <% end %>
   </div>
-</div>
+  <div class="comment-content">
     <div class="comments">   
-      <h4>＜コメント一覧＞</h4>
+      <div class="text-format mt-5 mb-4">
+      <i class="fa fa-baseball-ball text-warning"></i>
+        コメント
+      </div>
       <% if @comments %>
         <% @comments.each do |comment| %>
           <p>
-            <strong><%= comment.user.nickname %>：</strong>
-              <%= simple_format(comment.text) %>
+            <%= @num %>:
+            <strong><%= comment.user.nickname %></strong>
+              <div class="mt-3">
+                <%= simple_format(comment.text) %>
+              </div>
               <% if user_signed_in? && current_user.id == comment.user_id || current_user.admin %>
                 <%= link_to '削除', "/tweets/#{@tweet.id}/comments/#{comment.id}", method: :delete,class: "comment_delete_button" %>
               <% end %>
@@ -49,10 +56,11 @@
               <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
               </div>
           </p>
+          <%@num+=1%>
         <% end %>
       <% end %>
     </div>
-    <div class="comment_container"> 
+    <div class="comment-form"> 
     <!-- ここからフォーム -->
     <% if current_user %>
       <%= form_with(model:[@tweets, @comment], method: :post) do |f| %>
@@ -61,3 +69,5 @@
       <% end %>
     <% end %>
     </div>
+  </div>
+</div>
