試合記事ページ

--- a/app/views/tweets/_tweet_show.html.erb
+++ b/app/views/tweets/_tweet_show.html.erb
@@ -1,5 +1,5 @@
 <div class="article-main">
-  <div class="text-format mb-5">
+  <div class="text-format mb-5 text-warning">
     みんなの試合記事
   </div>
   <% @tweets.each do |tweet|%>
