--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -33,7 +33,6 @@
 .image {
   margin-top: 120px;
   text-align: center;
-  border-bottom: solid 2px rgb(221, 215, 203);
   position: relative;
 }
 
@@ -52,6 +51,10 @@ input {
   width: 50%;
 }
 
+.comment-content {
+  background-color: rgba(236, 236, 206,0.4);
+}
+
 .comment_at {
   margin-bottom: 80px;
   font-size: 11px;
@@ -63,7 +66,7 @@ input {
   padding: 0.1em 0.5em;
   text-decoration: none;
   color: #ff7e67;
-  border: double 4px #0aaee0;
+  border: double 3px #0aaee0;
   border-radius: 3px;
   transition: .4s;
   font-size: 11px;
@@ -74,20 +77,10 @@ input {
   background: #fffbef;
 }
 
-.good {
-  background-color: #0aaee0;
-  width: 7%;
-  position: absolute;
-  bottom: 0;
+.good,.good-after {
   right: 20px;
-}
-
-.good-after {
-  background-color: #FF66FF;
-  width: 7%;
-  position: absolute;
-  bottom: 0;
-  right: 20px;
+  background-color: white;
+  border: 2px solid white;
 }
 
 .good:hover + .fukidashi {
