--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -44,7 +44,8 @@
 }
 
 .main-content {
-  margin-top: 20px;
+  padding-top: 20px;
+  background-color: rgba(236, 236, 206,0.4);
   &-btn{
     display: flex;
   }
@@ -59,7 +60,6 @@
   font-size: 25px;
   text-align: center;
   font-weight: bold;
-  color: rgb(241, 206, 4);
 }
 
 .tournament-info {
