--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -11,7 +11,7 @@
       <%= link_to "トップページへ戻る",root_path,class: "return-top"%>
     <%end%>
   </div>
-  <div class="text-format mt-5">
+  <div class="text-format mt-5 text-primary">
     観た試合の感想をみんなに発信してみましょう！
   </div>
   <div class="images">
@@ -25,7 +25,7 @@
       <img src="https://sanchanne.com/wp-content/uploads/2019/09/fd72cd69ead1784014d1e58100d9a322.png" width="100" height="100">
     </div>
   </div>
-  <div class="text-format mt-5 mb-4">
+  <div class="text-format mt-5 mb-4 text-warning">
     大会別
   </div>
   <% @category_parent_array.each do |tournament|%>
