--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -38,5 +38,7 @@
     <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
     <%= form.submit "検索", class: "search-btn" %>
     <% end %>
- <%= render partial: "tweet_show"%>
+  <div class="article-main">
+    <%= render partial: "tweet_show"%>
+  </div>
 </div>
