--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -8,14 +8,14 @@
 <div class="user_name">
   <h4>投稿者 <%= link_to "#{@forecast.user.nickname}","/mypages/#{@forecast.user_id}"%></h4>
 </div>
-<div class="content_fcs">
-  <div class="school_fcs">
-    <div class="win_school">
+<div class="content-fcs_show mt-5">
+  <div class="school-fcs">
+    <div class="win-school">
       <p>勝利予想<p>
       <br>
       <%= @forecast.win_school.name%>
     </div>
-    <div class="lose_school">
+    <div class="lose-school">
       <p>敗退予想<p>
       <br>
       <%= @forecast.lose_school.name%>
@@ -26,24 +26,33 @@
   </div>
 </div>
 
-<div class="comments">   
-      <h4>＜コメント一覧＞</h4>
+  <div class="comment-content">
+    <div class="comments">   
+      <div class="text-format mt-5 mb-4 text-warning">
+      <i class="fa fa-baseball-ball text-warning"></i>
+        コメント
+      </div>
       <% if @comments %>
         <% @comments.each do |comment| %>
           <p>
-            <strong><%= comment.user.nickname %>：</strong>
-              <%= simple_format(comment.text) %>
+            <%= @num %>:
+            <strong><%= comment.user.nickname %></strong>
+              <div class="mt-3">
+                <%= simple_format(comment.text) %>
+              </div>
               <% if user_signed_in? && current_user.id == comment.user_id || current_user.admin %>
                 <%= link_to '削除', "/forecasts/#{@forecast.id}/comment_forecasts/#{comment.id}", method: :delete,class: "comment_delete_button" %>
               <% end %>
               <div class="comment_at">
-              <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
+                <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
               </div>
           </p>
+          <%@num+=1%>
         <% end %>
       <% end %>
     </div>
-    <div class="comment_container"> 
+    <div class="comment-form"> 
+    <!-- ここからフォーム -->
     <% if current_user %>
       <%= form_with(model:[@forecast, @comment], method: :post) do |f| %>
         <textarea cols="30" name="text" placeholder="コメントを記述" rows="2"></textarea>
@@ -51,3 +60,5 @@
       <% end %>
     <% end %>
     </div>
+  </div>
+</div>
