--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -1,2 +1,2 @@
 <%= link_to "予想一覧へ戻る",forecasts_path,class: "return-btn"%>
-<%= render partial: "forecasts/show"%>
+<%= render partial: "forecasts/forecasts"%>
