分析　予想　大会別

--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -1,2 +1,14 @@
-<%= link_to "予想一覧へ戻る",forecasts_path,class: "return-btn"%>
-<%= render partial: "forecasts/forecasts"%>
+<div class="main-content-btn">
+  <% if user_signed_in? %>
+    <%= link_to "投稿する",new_forecast_path,class: "send_btn"%>
+  <% end %>
+  <% unless current_page?(root_path)%>
+    <%= link_to "予想一覧へ戻る",forecasts_path,class: "return-btn_watch"%>
+  <%end%>
+</div>
+<div class="forecasts-main">
+  <div class="text-format text-danger mt-5 mb-5">
+    <%= @forecast.tournament.name%>
+  </div>
+  <%= render partial: "forecasts/forecasts"%>
+</div>
