--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -4,7 +4,7 @@
   padding-top: 30px;
 }
 
-.edit-article,.return-btn,.return-top {
+.edit-article,.return-btn,.return-top,.return-btn_watch {
   border: 2px solid #57e963;
   color: #57e963;
   padding: 5px;
