--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -28,13 +28,14 @@
   <div class="text-format mt-5 mb-4 text-warning">
     大会別
   </div>
-  <% @category_parent_array.each do |tournament|%>
-    <%= link_to "/tournaments/#{tournament.id}",class: "tournament-title text-white" do %>
-      <div class="by_tournament d-inline-block">
-        <i class="fa fa-baseball-ball text-white"></i><%= tournament.name %>
-      </div>
+    <% @category_parent_array.each do |tournament|%>
+      <%= link_to "/tournaments/#{tournament.id}",class: "title text-white" do%>
+        <div class="by_tournament d-inline-block">
+          <i class="fa fa-baseball-ball text-white"></i>
+          <%=tournament.name%>
+        </div>
+      <% end %>
     <% end %>
-  <%end%>
     <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search") do |form| %>
     <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
     <%= form.submit "検索", class: "search-btn" %>
