--- a/app/views/tournaments/watch.html.erb
+++ b/app/views/tournaments/watch.html.erb
@@ -11,7 +11,7 @@
   <%= link_to "平均評価を見る",watch_avg_tournament_path,class: "ays-avg" %>
   <p>みんなの集計結果を元にした平均評価を見れます<p>
 </div>
-<div class="forecasts-main">
+<div class="analysis-main">
   <div class="text-format text-success mt-5 mb-４">
     <%= @analysis_tournament.tournament.name%>
   </div>
