--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -25,7 +25,7 @@
         </div>
       <% end %>
     <% end %>
-  <div class="analysis_main">
+  <div class="analysis-main">
     <%= render partial: "analyses/show"%>
   </div>
   <div class="analsis_bottom">
