ヘッダー　ページに追加

--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "tweets/header"%>
 <%= link_to "トップページへ戻る",root_path %>
 <div class="myname">
   <h2><%= "#{@user.nickname}さんのプロフィール"%><h2>
