--- a/app/views/tournaments/watch.html.erb
+++ b/app/views/tournaments/watch.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "tweets/header"%>
 <div class="main-content-btn">
   <% if user_signed_in? %>
     <%= link_to "投稿する",new_forecast_path,class: "send_btn"%>
