分析詳細　背景

--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -1,4 +1,4 @@
-.analysis_main {
+.analysis-main {
   padding: 0 250px;
   background-image: url("photo0000-0331.jpg");
   background-size: cover;
@@ -103,6 +103,5 @@
 }
 
 .text-show {
-  text-align: center;
   margin-top: 100px;
 }
