--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -12,4 +12,5 @@
     <%= @forecast.tournament.name%>
   </div>
   <%= render partial: "forecasts/forecasts"%>
+  <%= paginate(@forecasts)%>
 </div>
