--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial=>"tweets/header"%>
 <div class="main-content-btn">
   <% if user_signed_in? %>
-    <%= link_to "投稿する",new_forecast_path,class: "send_btn"%>
+    <%= link_to "投稿する",new_tweet_path,class: "send_btn"%>
   <% end %>
   <% unless current_page?(root_path)%>
     <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn_watch"%>
@@ -12,4 +12,5 @@
     <%= @tweet.tournament.name%>
   </div>
   <%= render partial: "tweets/tweet_show"%>
+  <%= paginate(@tweets) %>
 </div>
