--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -12,7 +12,7 @@
   <div class="content-fcs_show">
     <div class="text-format mt-5 text-success">
       <i class="fas fa-search"></i>
-      試合評・感想<br><br>
+      分析内容<br><br>
       <%= @analysis.tournament.name%>
     </div>
     <div class="school_name-ays">
