--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -16,7 +16,7 @@
     <%=@tweet.school_b_score%>
     <%=@tweet.school_b.name%>
   </div>
-  <div class="sub_title">
+  <div class="sub_title pb-2 mt-5">
     <i class="fa fa-baseball-ball text-white"></i>
     <%=@tweet.title_info%>
   </div>
