名前サイズ　フォローアイコン

--- a/app/assets/stylesheets/mypage.scss
+++ b/app/assets/stylesheets/mypage.scss
@@ -1,5 +1,9 @@
-.myname,.text-myname,.residence,.my-links,.dm {
+.myname,.residence,.myprof,.dm {
   text-align: center;
+}
+
+.myname {
+  font-size: 30px;
 }
 
 .text-myname,.residence {
