--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -1,5 +1,5 @@
 <div class="text-format mb-5 text-warning">
-  <% if current_page?(analyses_path) || current_page?(watch_tournament_path)  %>
+  <% if current_page?(analyses_path) || current_page?(watch_ays_tournament_path)  %>
     みんなの戦力分析
   <% else %>
     投稿した戦力分析
