--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -18,7 +18,7 @@
     大会別
   </div>
     <% @category_parent_array.each do |tournament|%>
-      <%= link_to "/tournaments/#{tournament.id}/watch",class: "title text-white" do%>
+      <%= link_to "/tournaments/#{tournament.id}/watch_ays",class: "title text-white" do%>
         <div class="by_tournament d-inline-block">
           <i class="fa fa-baseball-ball text-white"></i>
           <%=tournament.name%>
