--- a/app/views/tournaments/watch_ays.html.erb
+++ b/app/views/tournaments/watch_ays.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "tweets/header"%>
-<div class="main-content-btn">
+<div class="main-content-btn mt-1">
   <% if user_signed_in? %>
     <%= link_to "投稿する",new_analysis_path,class: "send_btn"%>
   <% end %>
