--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -44,7 +44,6 @@
 }
 
 .main-content {
-  padding-top: 20px;
   background-color: rgba(236, 236, 206,0.4);
   &-btn{
     display: flex;
@@ -56,7 +55,7 @@
 }
 
 .text-format{
-  margin-top: 150px;
+  margin-top: 100px;
   font-size: 25px;
   text-align: center;
   font-weight: bold;
@@ -68,7 +67,7 @@
 
 .article {
   position: relative;
-  margin-bottom: 70px;
+  margin-top: 70px;
   background-color: #68ccf9;
   text-align: center;
   &-title {
@@ -77,7 +76,6 @@
   }
   &-image {
     position: absolute;
-    height: 100%;
     width: 10%;
   }
   &-info {
@@ -86,6 +84,13 @@
   }
   &:hover {
     opacity: 0.7;
+  }
+  &-main {
+    padding: 0 250px;
+    background-image: url("sky_00010.jpg");
+    background-size: cover;
+    background-color:rgba(255,255,255,0.8);
+    background-blend-mode:lighten;
   }
 }
 
@@ -131,14 +136,6 @@ h2 {
   margin: 10px 0;
   text-align: center;
   font-size: 25px;
-}
-
-.article-main {
-  background-image: url("sky_00010.jpg");
-  background-size: cover;
-  background-color:rgba(255,255,255,0.8);
-  background-blend-mode:lighten;
-  padding: 0 250px;
 }
 
 /* 検索 */
