--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -28,18 +28,16 @@
   <div class="text-format mt-5 mb-4 text-warning">
     大会別
   </div>
-    <% @category_parent_array.each do |tournament|%>
-      <%= link_to "/tournaments/#{tournament.id}",class: "title text-white" do%>
-        <div class="by_tournament d-inline-block">
-          <i class="fa fa-baseball-ball text-white"></i>
-          <%=tournament.name%>
-        </div>
-      <% end %>
+  <% @category_parent_array.each do |tournament|%>
+    <%= link_to "/tournaments/#{tournament.id}",class: "title text-white" do%>
+      <i class="fa fa-baseball-ball text-white"></i>
+      <%=tournament.name%>
     <% end %>
-    <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search mt-5") do |form| %>
-    <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
-    <%= form.submit "検索", class: "search-btn" %>
-    <% end %>
+  <% end %>
+  <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search mt-5 mb-5") do |form| %>
+  <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
+  <%= form.submit "検索", class: "search-btn" %>
+  <% end %>
   <div class="article-main">
     <%= render partial: "tweet_show"%>
     <%= paginate(@tweets) %>
