--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -8,7 +8,7 @@
   <%end%>
 </div>
 <div class="forecasts-main">
-  <div class="text-format text-danger mt-5 mb-5">
+  <div class="text-format text-danger pt-2 mb-5">
     <%= @forecast.tournament.name%>
   </div>
   <%= render partial: "forecasts/forecasts"%>
