--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,16 +1,18 @@
 <%= render :partial=>"tweets/header"%>
-<div class="main-content-btn mt-1">
-  <% if user_signed_in? %>
-    <%= link_to "投稿する",new_tweet_path,class: "send_btn"%>
-  <% end %>
-  <% unless current_page?(root_path)%>
-    <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn_watch"%>
-  <%end%>
-</div>
-<div class="article-main">
-  <div class="text-format text-success mt-1 mb-４">
-    <%= @tweet.tournament.name%>
+<div class="tournament-tweet">
+  <div class="main-content-btn mt-1">
+    <% if user_signed_in? %>
+      <%= link_to "投稿する",new_tweet_path,class: "send_btn"%>
+    <% end %>
+    <% unless current_page?(root_path)%>
+      <%= link_to "記事一覧へ戻る",tweets_path,class: "return-btn_watch"%>
+    <%end%>
   </div>
-  <%= render partial: "tweets/tweet_show"%>
-  <%= paginate(@tweets) %>
+  <div class="article-main">
+    <div class="text-format text-success mt-1 pt-5 mb-４">
+      <%= @tweet.tournament.name%>
+    </div>
+    <%= render partial: "tweets/tweet_show"%>
+    <%= paginate(@tweets) %>
+  </div>
 </div>
