戦力分析　大会別　縦幅

--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -1,4 +1,4 @@
-<div class="text-format mb-5 text-warning">
+<div class="text-format mb-5 pt-5 text-warning">
   <% if current_page?(analyses_path) || current_page?(watch_ays_tournament_path)  %>
     みんなの戦力分析
   <% else %>
