--- a/app/views/tournaments/watch_ays.html.erb
+++ b/app/views/tournaments/watch_ays.html.erb
@@ -13,7 +13,7 @@
   <p>みんなの集計結果を元にした平均評価を見れます<p>
 </div>
 <div class="analysis-main">
-  <div class="text-format text-success mt-5 mb-４">
+  <div class="text-format text-success mt-5 pt-5 mb-４">
     <%= @analysis_tournament.tournament.name%>
   </div>
   <%= render partial: "analyses/show"%>
