--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -2,7 +2,7 @@
 <div class="analysis_header">
   <h1>戦力分析<h1>
 </div>
-<div class="main-content">
+<div class="main-content pt-2">
   <div class="main-content-btn">
     <% if user_signed_in? %>
       <%= link_to "投稿する",new_analysis_path,class: "send_btn"%>
