試合予想　大会別　縦幅

--- a/app/views/forecasts/index.html.erb
+++ b/app/views/forecasts/index.html.erb
@@ -3,7 +3,7 @@
   <h1>試合予想<h1>
 </div>
 <div class="main-content">
-  <div class="main-content-btn">
+  <div class="main-content-btn pt-2">
     <% if user_signed_in? %>
       <%= link_to "投稿する",new_forecast_path,class: "send_btn"%>
     <% end %>
