--- a/app/views/forecasts/_forecasts.html.erb
+++ b/app/views/forecasts/_forecasts.html.erb
@@ -1,4 +1,4 @@
-<div class="text-format mb-5 text-danger">
+<div class="text-format mb-5 pt-5 text-danger">
   <% if current_page?(forecasts_path) || current_page?(watch_fcs_tournament_path)  %>
     みんなの試合予想
   <% else %>
