--- a/app/views/tournaments/watch_fcs.html.erb
+++ b/app/views/tournaments/watch_fcs.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "tweets/header"%>
-<div class="tournament-forecast h-100">
+<div class="tournament-forecast">
   <div class="main-content-btn mt-1">
     <% if user_signed_in? %>
       <%= link_to "投稿する",new_forecast_path,class: "send_btn"%>
