--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -69,6 +69,7 @@
   margin-top: 70px;
   background-color: #68ccf9;
   text-align: center;
+  border: solid 1px rgb(255, 255, 255);
   &-title {
     font-size: 25px;
     color: white;
